# sql-query-env

./: Dockerfile  README.md  app.py  baseline.py  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
